Bug 741319 - Delete textures using the same context used to create them, on the thread that owns that context. r=joe